// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - headings [CS-310] should ignore heading text when fails to create a heading 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "nothing",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - headings [CS-572] should not need a whitespace 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 1,
        "localId": null,
      },
      "content": [
        {
          "text": "this is a heading node",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - headings should allow heading inside panel 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "level": 1,
            "localId": null,
          },
          "content": [
            {
              "text": "heading",
              "type": "text",
            },
          ],
          "type": "heading",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - headings should convert string with heading in it 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a string.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 1,
        "localId": null,
      },
      "content": [
        {
          "text": "Boom! this is a heading with ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "bold",
          "type": "text",
        },
        {
          "text": " text in it",
          "type": "text",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - headings should treat h7 as usual text inside macro 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "text": "h7. heading",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;
